init fix event
